force-app/main/default/objects/APF__c/APF__c.object-meta.xml
<CustomObject>
    <label>APF</label>
    <nameField>
        <displayFormat>APF-{0000}</displayFormat>
        <label>APF Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>APF</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>