force-app/main/default/objects/APF__c/fields/APF_Number__c.field-meta.xml
<CustomField>
    <fullName>APF_Number__c</fullName>
    <label>APF Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>