force-app/main/default/objects/APF__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WACL</fullName>
            </value>
            <value>
                <fullName>EVIE</fullName>
            </value>
            <value>
                <fullName>RRPL</fullName>
            </value>
            <value>
                <fullName>RREPL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>