force-app/main/default/objects/APF__c/fields/Connector_Fee__c.field-meta.xml
<CustomField>
    <fullName>Connector_Fee__c</fullName>
    <label>Connector Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>