force-app/main/default/objects/APF__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <defaultValue>DATE(2040,01,01)</defaultValue>
    <label>End Date</label>
    <type>Date</type>
</CustomField>