force-app/main/default/objects/APF__c/fields/Ladder_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Ladder_Scheme__c</fullName>
    <label>Ladder Scheme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>