force-app/main/default/objects/APF__c/fields/Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Entity</label>
    <referenceTo>Legal_Entity__c</referenceTo>
    <relationshipLabel>APF</relationshipLabel>
    <relationshipName>APF</relationshipName>
    <type>Lookup</type>
</CustomField>