force-app/main/default/objects/APF__c/fields/Maximum_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Threshold__c</fullName>
    <defaultValue>200.00</defaultValue>
    <label>Maximum Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>