force-app/main/default/objects/APF__c/fields/Minimum_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Threshold__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Minimum Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>