force-app/main/default/objects/APF__c/fields/Net_Gross__c.field-meta.xml
<CustomField>
    <fullName>Net_Gross__c</fullName>
    <label>Net/Gross</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Net</fullName>
            </value>
            <value>
                <fullName>Gross</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>