force-app/main/default/objects/APF__c/fields/NOC_Template__c.field-meta.xml
<CustomField>
    <fullName>NOC_Template__c</fullName>
    <label>NOC Template</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>