force-app/main/default/objects/APF__c/fields/Payout_Rate__c.field-meta.xml
<CustomField>
    <fullName>Payout_Rate__c</fullName>
    <label>Payout Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>