force-app/main/default/objects/APF__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <formula>RW_Project__r.Name</formula>
    <label>Project Name</label>
    <type>Text</type>
</CustomField>