force-app/main/default/objects/APF__c/fields/RW_APF_coordination_Initiated_Date__c.field-meta.xml
<CustomField>
    <fullName>RW_APF_coordination_Initiated_Date__c</fullName>
    <label>APF coordination Initiated Date</label>
    <type>Date</type>
</CustomField>