force-app/main/default/objects/APF__c/fields/RW_APF_Received_date__c.field-meta.xml
<CustomField>
    <fullName>RW_APF_Received_date__c</fullName>
    <label>APF Received date</label>
    <type>Date</type>
</CustomField>