force-app/main/default/objects/APF__c/fields/RW_Bank_Contact_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>RW_Bank_Contact_Email_Id__c</fullName>
    <label>Bank Contact Email Id</label>
    <type>Email</type>
</CustomField>