force-app/main/default/objects/APF__c/fields/RW_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>RW_Bank_Name__c</fullName>
    <label>Bank Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>APF_Bank_Name</valueSetName>
    </valueSet>
</CustomField>