force-app/main/default/objects/APF__c/fields/RW_Bank_Spoc_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>RW_Bank_Spoc_Contact_Number__c</fullName>
    <label>Bank Spoc Contact Number</label>
    <type>Phone</type>
</CustomField>