force-app/main/default/objects/APF__c/fields/RW_Bank_Spoc_Designation__c.field-meta.xml
<CustomField>
    <fullName>RW_Bank_Spoc_Designation__c</fullName>
    <label>Bank Spoc Designation</label>
    <length>30</length>
    <type>Text</type>
</CustomField>