force-app/main/default/objects/APF__c/fields/RW_Bank_Spoc_Name__c.field-meta.xml
<CustomField>
    <fullName>RW_Bank_Spoc_Name__c</fullName>
    <label>Bank Spoc Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>