force-app/main/default/objects/APF__c/fields/RW_Date_Of_Closure__c.field-meta.xml
<CustomField>
    <fullName>RW_Date_Of_Closure__c</fullName>
    <label>Date Of Closure</label>
    <type>Date</type>
</CustomField>