force-app/main/default/objects/APF__c/fields/RW_Relationship_Manager__c.field-meta.xml
<CustomField>
    <fullName>RW_Relationship_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship Manager</label>
    <referenceTo>Relationship_Manager__c</referenceTo>
    <relationshipLabel>APF</relationshipLabel>
    <relationshipName>APF</relationshipName>
    <type>Lookup</type>
</CustomField>