force-app/main/default/objects/APF__c/fields/RW_Tower__c.field-meta.xml
<CustomField>
    <fullName>RW_Tower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tower</label>
    <referenceTo>Tower__c</referenceTo>
    <relationshipLabel>APF</relationshipLabel>
    <relationshipName>APF</relationshipName>
    <type>Lookup</type>
</CustomField>