force-app/main/default/objects/APF__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <defaultValue>DATE(1990,01,01)</defaultValue>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>