force-app/main/default/objects/APF__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RW_Project__c</columns>
    <columns>RW_Tower__c</columns>
    <columns>RW_APF_coordination_Initiated_Date__c</columns>
    <columns>RW_APF_Received_date__c</columns>
    <columns>APF_Number__c</columns>
    <columns>RW_Bank_Name__c</columns>
    <columns>Connector__c</columns>
    <columns>Connector_Fee__c</columns>
    <columns>RW_Bank_Contact_Email_Id__c</columns>
    <columns>RW_Bank_Spoc_Contact_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>