force-app/main/default/objects/APF__c/listViews/APF_RRPL.listView-meta.xml
<ListView>
    <fullName>APF_RRPL</fullName>
    <columns>NAME</columns>
    <columns>RW_Bank_Name__c</columns>
    <columns>Legal_Entity__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Minimum_Threshold__c</columns>
    <columns>Maximum_Threshold__c</columns>
    <columns>Net_Gross__c</columns>
    <columns>Payout_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Legal_Entity_Name__c</field>
        <operation>equals</operation>
        <value>RRPL</value>
    </filters>
    <label>APF RRPL</label>
</ListView>